--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/EASY MARKERS.png" type="image/x-icon">
     <link rel="shortcut icon" href="img/EASY MARKERS.png" type="image/x-icon">
+    <script src="js/validar.js"></script>
 </head>
 <body>
 
@@ -145,7 +146,7 @@
 
 <div class="container">
     <h1>ENTRE EM CONTATO CONOSCO!</h1>
-    <form>
+    <form id="contactForm">
         <label for="nomeCompleto">Nome Completo</label>
         <input type="text" id="nomeCompleto" name="nomeCompleto" required>
 
@@ -172,7 +173,7 @@
         <label for="ferramentaMKT">Você Utiliza Alguma Ferramenta de Marketing Digital?</label>
         <input type="text" id="ferramentaMKT" name="ferramentaMKT">
         
-        <button type="submit" class="submit1">Enviar</button>
+        <button type="button" onclick="validarEnviar()">Enviar</button>
     </form>
 </div>
 </section>
